--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "concurrently": "^8.2.2",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.338.0",
     "ms": "^2.1.3",
     "next": "14.1.0",
