--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-dom": "^18.2.0",
     "react-email": "2.1.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
     "react-textarea-autosize": "^8.5.3",
     "resend": "^3.2.0",
     "sharp": "^0.33.2",
