--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-email": "2.1.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
