--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "next lint",
     "preview": "next build && next start",
     "postinstall": "prisma generate",
-    "email": "email dev --dir emails --port 3333"
+    "email": "email dev --dir emails --port 3333",
+    "test": "jest"
   },
   "overrides": {
     "next-contentlayer": {
@@ -59,6 +60,7 @@
     "@react-email/components": "0.0.15",
     "@react-email/html": "0.0.7",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@types/jest": "^29.5.12",
     "@typescript-eslint/parser": "^7.0.2",
     "@vercel/analytics": "^1.2.2",
     "@vercel/og": "^0.6.2",
@@ -69,6 +71,7 @@
     "contentlayer": "^0.3.4",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
+    "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.338.0",
     "ms": "^2.1.3",
     "next": "14.1.0",
@@ -91,6 +94,7 @@
     "stripe": "^14.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.1.2",
     "vaul": "^0.9.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
@@ -111,6 +115,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-tailwindcss": "^3.14.3",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "mdast-util-toc": "^7.0.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
