--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.10",
+    "nodemailer-express-handlebars": "^6.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
