--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,15 @@ NEXT_PUBLIC_STRIPE_PRO_YEARLY_PLAN_ID=
 
 NEXT_PUBLIC_STRIPE_BUSINESS_MONTHLY_PLAN_ID=
 NEXT_PUBLIC_STRIPE_BUSINESS_YEARLY_PLAN_ID=
+
+
+EDGE_STORE_ACCESS_KEY=
+EDGE_STORE_SECRET_KEY=
+
+
+
+BASE_EDGESTORE_URL='https://files.edgestore.dev/[id]/publicFiles/_public'
+
+ADMIN_EMAIL=''
+# APP AUTH PASSWORRD 
+EMAIL_PASSWORD=''
