--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "recharts": "^2.12.3",
     "resend": "^3.2.0",
     "sharp": "^0.33.2",
     "shiki": "^1.1.6",
