--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@react-email/button": "0.0.14",
     "@react-email/components": "0.0.15",
     "@react-email/html": "0.0.7",
+    "@react-three/fiber": "^8.15.19",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/parser": "^7.0.2",
