--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@edgestore/server": "^0.1.6",
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
+    "@nivo/bar": "^0.85.1",
+    "@nivo/line": "^0.85.1",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
