refactor the prisma schema and modified fields

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@typescript-eslint/parser": "^7.0.2",
     "@vercel/analytics": "^1.2.2",
     "@vercel/og": "^0.6.2",
+    "better-auth": "^1.1.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
